test/zinc_source/compile_errors/functions/25_ufcs_positional_after_named.zn
// expected-error: positional arguments must come before named arguments

fn combine(x: i64, y, z) {
    return x + y + z
}

fn main() {
    value = 1
    print(value.combine(y=2, 3))
}
